Oppdater build.gradle.kts (#585)
* Oppdater build.gradle.kts
* Bump Testcontainer-versjoner